# ppmt

./: .env  .env.example  .gitignore  .initial_snapshot.json  ANALISIS_CRITICO_v0.34.0.md  ARCHITECTURE.md  ARCHITECTURE_V1.md  CHANGELOG.md  ESTADO_PROYECTO.md  ESTRATEGIA-ALT-VOLATILIDAD.md  HANDOFF.md  MEJORAS-v82.md  OPTIMIZATION_v2.2_FINDINGS.md  OPTIMIZATION_v2.3_FINDINGS.md  OPTIMIZATION_v2.5_FINDINGS.md  PPMT_TERMINAL_PLAN.md  PPMT_v7_MASTER_PLAN.md  QUANT_FRAMEWORK.md  README.md  RUNBOOK_layer2.md  RUNBOOK_paper_trading.md  RUNBOOK_v12_paper_trading.md  RUNBOOK_v75.md  STATUS.md  TRACEABILITY.md  TRACEABILITY_v0.31.md  TRAZABILIDAD-v82.md  TRAZABILIDAD.md  github_ppmt_main.json  groups_config.json  next.config.ts  oos_validation_results.json  package-lock.json  package.json  prisma.config.ts  pyproject.toml  restart.sh  setup_fresh.sh  signal_loop.sh  start.sh  (+3 more)
agent-ctx/: 1-auto-backfill-ohlcv.md  2-a-main-agent.md  2-auto-evolution-loop.md  2-c-subagent-c.md  2-d-main-agent.md  2-seed-ohlcv-backfill-agent.md  3-etherscan-price-fix.md  3-fix-results-ranking.md  3-smart-money-fix.md  4-enhance-trade-history-strategy-tracker.md  5-b-main-agent.md  6-code-agent.md  7-dashboard-standalone-agent.md  7-multi-chain-scanner-fix.md  P5-D-main.md  executive-dashboard-agent.md  fix-ai-strategy-execution-main-dev-agent.md  fix-critical-issues-main.md  fix-results-ranking-layout-agent.md  ppmt-dashboard-rewrite-main-dev-agent.md  restructure-cryptoquant.md  task-market-regime-panel-agent.md  validation-features-main.md  validation-suite-main-dev-agent.md
config/: default.yaml  v7.yaml
db/: custom.db
docs/: AUDIT_FIX14_AND_DATA_V3.md  AUDIT_TRAZABILIDAD_CAPAS_1_2_3.md  AUDIT_TRIE_EXTENDED_14TOK_100K.md  AUDIT_TRIE_STATS_1M_REAL_DATA.md  AUDIT_V4_EXPANDED_DATASET.md
download/: CryptoQuant-Terminal-RUTA-v2.txt  architecture-diagram.mmd  cryptoquant-arch.html  cryptoquant-architecture.html  diagram1-full-flow.html  diagram2-sde-pipeline.html  diagram3-dependency-map.html  diagram3-module-dependency.html  diagram4-api-routes.html  generate_analysis_v3.py  generate_audit_report.py  generate_phase1_pdf.py  render-diagrams.js  screenshot_arch.py  system-flow-map.html  trader_analysis.json  (+1 more)
(+1281 files in other folders)
