[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppmt-terminal"
version = "0.24.0"
description = "PPMT Terminal - Autonomous Pattern-Based Trading Terminal with Real-Time Visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "PPMT Team"}]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "websockets>=12.0",
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
terminal = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
exchange = [
    "ccxt>=4.0.0; python_version>='3.10'",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ppmt = "ppmt.cli.main:cli"
ppmt-terminal = "ppmt.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ppmt*"]
exclude = ["app*", "components*", "hooks*", "lib*", "store*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
